--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,6 +9,7 @@
     tools:context=".MainActivity">
 
     //Text Message Title
+
     <TextView
         android:id="@+id/titleTextView"
         android:layout_width="wrap_content"
@@ -17,15 +18,13 @@
         android:layout_centerHorizontal="true"
         android:text="Image Editor App"
         android:textColor="#000"
-        android:textSize="35sp"
-        />
+        android:textSize="35sp" />
 
 
     //Image Widget
 
     <Button
         android:id="@+id/rotateButton"
-        style="@style/Widget.MaterialComponents.Button.Icon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_above="@id/flipButton"
@@ -34,13 +33,14 @@
         android:text="Rotate"
         android:textColor="#FFFFFF"
         app:backgroundTint="#001E8A"
-        app:icon="@android:drawable/ic_menu_rotate" />
+         />
 
     <ImageView
         android:id="@+id/appImage"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
+        android:layout_centerVertical="true"
         android:adjustViewBounds="true"
         android:src="@drawable/app_image" />
 
@@ -123,8 +123,6 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentBottom="true"
-        style="@style/Widget.MaterialComponents.Button.Icon"
-        app:icon="@android:drawable/arrow_down_float"
         android:onClick="flipClicked"
         android:text="Flip"
         android:textColor="#FFFFFF"
